# USBPcapOdinDumper.py

./: .editorconfig  .gitattributes  .gitignore  ReadMe.md  pyproject.toml
.github/workflows/: CI.yml
USBPcapOdinDumper/: Dumper.py  Dumping.py  OdinDumping.py  Packet.py  PcapDumping.py  USBPcapDumping.py  __main__.py
USBPcapOdinDumper/kaitai/: endpoint_number.py  linux_usb_setup.py  odin3.py  pcap.py  protocol_body.py  usb_pcap_endpoint_number.py  usb_request_block.py  usb_urb_windows.py  usbd_status_windows.py  usbmon.py  usbpcap.py  windows_urb.py
patches/: remove_shit.patch
